src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-02.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-02.html
---
BEGIN:VEVENT
UID:17611365098027148653@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240201T060000Z
DTEND:20240201T080000Z
SUMMARY:大宮武道館(2F)K
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:486627047675354529@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240204T060000Z
DTEND:20240204T080000Z
SUMMARY:戸田SC(2F)J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:12584491195176103173@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240204T040000Z
DTEND:20240204T080000Z
SUMMARY:丹波 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:15526213317817358507@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240205T040000Z
DTEND:20240205T080000Z
SUMMARY:上板橋IJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:14983358497946568432@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240208T080000Z
DTEND:20240208T100000Z
SUMMARY:戸田SC(2F)J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:10697333473107154542@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240210T040000Z
DTEND:20240210T060000Z
SUMMARY:大宮武道館(2F)IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:4944525915822995689@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240211T040000Z
DTEND:20240211T080000Z
SUMMARY:戸田SC(3F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:17219659156785349690@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240211T040000Z
DTEND:20240211T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:18231980012342161310@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240212T040000Z
DTEND:20240212T080000Z
SUMMARY:上板橋KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:7639650799992688489@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240215T080000Z
DTEND:20240215T100000Z
SUMMARY:戸田SC(2F)IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:9097326345621518712@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240218T000000Z
DTEND:20240218T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:18397729137023251329@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240219T040000Z
DTEND:20240219T080000Z
SUMMARY:上板橋IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:17370984911540121978@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240222T060000Z
DTEND:20240222T080000Z
SUMMARY:大宮武道館(2F)IJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:4027440395694980612@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240224T060000Z
DTEND:20240224T080000Z
SUMMARY:戸田SC(3F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:2264909412638384040@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240225T040000Z
DTEND:20240225T060000Z
SUMMARY:戸田SC(2F)IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:3178533538037234451@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240225T040000Z
DTEND:20240225T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:16893904644401812846@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240226T040000Z
DTEND:20240226T080000Z
SUMMARY:上板橋KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:10068284699143980989@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART;VALUE=DATE:20240228
DTEND;VALUE=DATE:20240228
SUMMARY:モンバール合宿出発
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
BEGIN:VEVENT
UID:8860733649759097507@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART;VALUE=DATE:20240229
DTEND;VALUE=DATE:20240229
SUMMARY:合宿1日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202402.html
END:VEVENT
