src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-02.html.snap
---
source: src/main.rs
expression: result
input_file: src/fixtures/2024-02.html
---
MonthResult {
    year: 2024,
    month: 2,
    events: [
        Timed {
            day: 1,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)K",
        },
        Timed {
            day: 4,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "戸田SC(2F)J",
        },
        Timed {
            day: 4,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "丹波 柔道場/自主稽古",
        },
        Timed {
            day: 5,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "上板橋IJ",
        },
        Timed {
            day: 8,
            from: Time {
                hours: 17,
                minutes: 0,
            },
            to: Time {
                hours: 19,
                minutes: 0,
            },
            text: "戸田SC(2F)J",
        },
        Timed {
            day: 10,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 15,
                minutes: 0,
            },
            text: "大宮武道館(2F)IK",
        },
        Timed {
            day: 11,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "戸田SC(3F)KJ",
        },
        Timed {
            day: 11,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 12,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "上板橋KJ",
        },
        Timed {
            day: 15,
            from: Time {
                hours: 17,
                minutes: 0,
            },
            to: Time {
                hours: 19,
                minutes: 0,
            },
            text: "戸田SC(2F)IK",
        },
        Timed {
            day: 18,
            from: Time {
                hours: 9,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場 本稽古",
        },
        Timed {
            day: 19,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "上板橋IK",
        },
        Timed {
            day: 22,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)IJ",
        },
        Timed {
            day: 24,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "戸田SC(3F)KJ",
        },
        Timed {
            day: 25,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 15,
                minutes: 0,
            },
            text: "戸田SC(2F)IK",
        },
        Timed {
            day: 25,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 26,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "上板橋KJ",
        },
        FullDay {
            day: 28,
            text: "モンバール合宿出発",
        },
        FullDay {
            day: 29,
            text: "合宿1日目",
        },
    ],
    errors: [],
}
