src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-03.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-03.html
---
BEGIN:VEVENT
UID:9706141324866797581@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240301
DTEND;VALUE=DATE:20240301
SUMMARY:合宿2日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:3455959521517397696@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240302
DTEND;VALUE=DATE:20240302
SUMMARY:合宿３日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:6848528157302870689@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240303
DTEND;VALUE=DATE:20240303
SUMMARY:合宿４日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:4412778531666165861@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240303T040000Z
DTEND:20240303T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:11332570489655687127@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240304
DTEND;VALUE=DATE:20240304
SUMMARY:合宿５日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:13446845392782104266@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240304T040000Z
DTEND:20240304T080000Z
SUMMARY:上板橋（自主稽古）
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:8073195373946771673@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240306
DTEND;VALUE=DATE:20240306
SUMMARY:帰国
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:7558271938852335232@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240307T060000Z
DTEND:20240307T080000Z
SUMMARY:戸田SC(3F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:18142371920026879877@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240309T040000Z
DTEND:20240309T060000Z
SUMMARY:戸田SC(2F)J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:10584723169918583941@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240310T060000Z
DTEND:20240310T080000Z
SUMMARY:大宮武道館(1F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:18377680727714323348@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240310T040000Z
DTEND:20240310T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:8072290547640623145@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240311T040000Z
DTEND:20240311T080000Z
SUMMARY:戸田SC(2F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:4362073064457288937@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240314T060000Z
DTEND:20240314T080000Z
SUMMARY:戸田SC(3F)IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:2001322566604588396@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240317T000000Z
DTEND:20240317T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:9475322129225839845@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240318T040000Z
DTEND:20240318T080000Z
SUMMARY:上板橋IJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:10732937419636736018@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240321T080000Z
DTEND:20240321T100000Z
SUMMARY:大宮武道館(2F)J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:7662176793032347236@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240324T040000Z
DTEND:20240324T060000Z
SUMMARY:戸田SC(2F)IJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:12707446754592105019@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240324T040000Z
DTEND:20240324T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:450864256639989932@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240325T040000Z
DTEND:20240325T080000Z
SUMMARY:上板橋J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:5490383189918954399@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240328T080000Z
DTEND:20240328T100000Z
SUMMARY:戸田SC(2F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:14555094594558381548@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240330T040000Z
DTEND:20240330T060000Z
SUMMARY:大宮武道館(2F半面)IJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:7429301051050809249@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240331T040000Z
DTEND:20240331T060000Z
SUMMARY:戸田SC(2F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
BEGIN:VEVENT
UID:1629989038796911498@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240331T040000Z
DTEND:20240331T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202403.html
END:VEVENT
