src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-04.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-04.html
---
BEGIN:VEVENT
UID:14633765546162293962@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART;VALUE=DATE:20240401
DTEND;VALUE=DATE:20240401
SUMMARY:12:30~15:30 練馬総合体育館 柔道場J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:14775550045553057455@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240404T080000Z
DTEND:20240404T100000Z
SUMMARY:大宮武道館(2F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:2481773822346516357@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240407T040000Z
DTEND:20240407T060000Z
SUMMARY:戸田SC(2F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:4502227303866425625@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240407T040000Z
DTEND:20240407T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:6987105663984803875@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240408T040000Z
DTEND:20240408T080000Z
SUMMARY:戸田SC(3F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:13814684507566146997@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240411T060000Z
DTEND:20240411T080000Z
SUMMARY:戸田SC(3F)J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:6235311206172686660@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240414T000000Z
DTEND:20240414T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:4289028069890715580@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART;VALUE=DATE:20240415
DTEND;VALUE=DATE:20240415
SUMMARY:12:30~15:30 練馬総合体育館 柔道場JB
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:15602043788337562192@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240418T060000Z
DTEND:20240418T080000Z
SUMMARY:戸田SC(3F)JB
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:9825218756617061975@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240420T040000Z
DTEND:20240420T060000Z
SUMMARY:戸田SC(3F)JB
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:17785271483926652051@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240421T060000Z
DTEND:20240421T080000Z
SUMMARY:大宮武道館(2F)JB
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:12031527312910886542@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240421T040000Z
DTEND:20240421T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:2321140440042626874@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART;VALUE=DATE:20240422
DTEND;VALUE=DATE:20240422
SUMMARY:12:30~15:30 練馬総合体育館 柔道場JB
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:7500886142763876527@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240425T060000Z
DTEND:20240425T080000Z
SUMMARY:大宮武道館(2F)JB
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:17798455802543470503@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240427T040000Z
DTEND:20240427T060000Z
SUMMARY:大宮武道館(1F)JB
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:6233266760097486616@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240428T060000Z
DTEND:20240428T080000Z
SUMMARY:大宮武道館(2F)JB
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:11174370668825475839@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240428T040000Z
DTEND:20240428T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
BEGIN:VEVENT
UID:14798017341838030002@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240429T020000Z
DTEND:20240429T040000Z
SUMMARY:戸田SC(3F)（大宮稽古会)IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202404.html
END:VEVENT
