src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-04.html.snap
---
source: src/main.rs
expression: result
input_file: src/fixtures/2024-04.html
---
MonthResult {
    year: 2024,
    month: 4,
    events: [
        Timed {
            day: 1,
            from: Time {
                hours: 12,
                minutes: 30,
            },
            to: Time {
                hours: 15,
                minutes: 30,
            },
            text: "練馬総合体育館 柔道場J",
        },
        Timed {
            day: 4,
            from: Time {
                hours: 17,
                minutes: 0,
            },
            to: Time {
                hours: 19,
                minutes: 0,
            },
            text: "大宮武道館(2F)KJ",
        },
        Timed {
            day: 7,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 15,
                minutes: 0,
            },
            text: "戸田SC(2F)KJ",
        },
        Timed {
            day: 7,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 8,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "戸田SC(3F)KJ",
        },
        Timed {
            day: 11,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "戸田SC(3F)J",
        },
        Timed {
            day: 14,
            from: Time {
                hours: 9,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場 本稽古",
        },
        Timed {
            day: 15,
            from: Time {
                hours: 12,
                minutes: 30,
            },
            to: Time {
                hours: 15,
                minutes: 30,
            },
            text: "練馬総合体育館 柔道場JB",
        },
        Timed {
            day: 18,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "戸田SC(3F)JB",
        },
        Timed {
            day: 20,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 15,
                minutes: 0,
            },
            text: "戸田SC(3F)JB",
        },
        Timed {
            day: 21,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)JB",
        },
        Timed {
            day: 21,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 22,
            from: Time {
                hours: 12,
                minutes: 30,
            },
            to: Time {
                hours: 15,
                minutes: 30,
            },
            text: "練馬総合体育館 柔道場JB",
        },
        Timed {
            day: 25,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)JB",
        },
        Timed {
            day: 27,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 15,
                minutes: 0,
            },
            text: "大宮武道館(1F)JB",
        },
        Timed {
            day: 28,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)JB",
        },
        Timed {
            day: 28,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 29,
            from: Time {
                hours: 11,
                minutes: 0,
            },
            to: Time {
                hours: 13,
                minutes: 0,
            },
            text: "戸田SC(3F)（大宮稽古会)IK",
        },
    ],
    errors: [],
}
