src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-05.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-05.html
---
BEGIN:VEVENT
UID:13311283357413872081@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240502
DTEND;VALUE=DATE:20240502
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:5283131439777291466@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240503
DTEND;VALUE=DATE:20240503
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:7057701170868768272@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240504
DTEND;VALUE=DATE:20240504
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:11801852735107406785@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240505
DTEND;VALUE=DATE:20240505
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:17206931551596480291@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240506
DTEND;VALUE=DATE:20240506
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:15665604544804112016@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240506
DTEND;VALUE=DATE:20240506
SUMMARY:12:30~15:30 練馬総合体育館剣道場（自主稽古）
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:2989503717427626514@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240509T080000Z
DTEND:20240509T100000Z
SUMMARY:大宮武道館(2F)IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:2178006292829417477@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240511T060000Z
DTEND:20240511T080000Z
SUMMARY:大宮武道館(2F)IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:3323549664687580847@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240512T020000Z
DTEND:20240512T040000Z
SUMMARY:戸田SC(3F)J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:5436945438172175027@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240512T040000Z
DTEND:20240512T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:3862786751982062269@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240513T040000Z
DTEND:20240513T080000Z
SUMMARY:戸田SC(3F)IK
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:13446083145283650760@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240516T060000Z
DTEND:20240516T080000Z
SUMMARY:大宮武道館(2F)J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:7463110819032021753@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240519T060000Z
DTEND:20240519T080000Z
SUMMARY:大宮武道館(2F)K
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:10974255877799208858@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240519T040000Z
DTEND:20240519T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:13615732949409936564@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240520
DTEND;VALUE=DATE:20240520
SUMMARY:12:30~15:30 練馬総合体育館柔道場J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:11407135868693295204@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240523T060000Z
DTEND:20240523T080000Z
SUMMARY:大宮武道館(2F)KJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:3916289235493117321@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240526T060000Z
DTEND:20240526T080000Z
SUMMARY:大宮武道館(2F)IJ
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:3846418803760771475@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240526T040000Z
DTEND:20240526T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:600516204589034802@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240527
DTEND;VALUE=DATE:20240527
SUMMARY:12:30~15:30 練馬総合体育館柔道場J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
BEGIN:VEVENT
UID:4963416824449955567@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240530T080000Z
DTEND:20240530T100000Z
SUMMARY:戸田SC(2F)J
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202405.html
END:VEVENT
