src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-05.html.snap
---
source: src/main.rs
expression: result
input_file: src/fixtures/2024-05.html
---
MonthResult {
    year: 2024,
    month: 5,
    events: [
        FullDay {
            day: 2,
            text: "丹波合宿",
        },
        FullDay {
            day: 3,
            text: "丹波合宿",
        },
        FullDay {
            day: 4,
            text: "丹波合宿",
        },
        FullDay {
            day: 5,
            text: "丹波合宿",
        },
        FullDay {
            day: 6,
            text: "丹波合宿",
        },
        Timed {
            day: 6,
            from: Time {
                hours: 12,
                minutes: 30,
            },
            to: Time {
                hours: 15,
                minutes: 30,
            },
            text: "練馬総合体育館剣道場（自主稽古）",
        },
        Timed {
            day: 9,
            from: Time {
                hours: 17,
                minutes: 0,
            },
            to: Time {
                hours: 19,
                minutes: 0,
            },
            text: "大宮武道館(2F)IK",
        },
        Timed {
            day: 11,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)IK",
        },
        Timed {
            day: 12,
            from: Time {
                hours: 11,
                minutes: 0,
            },
            to: Time {
                hours: 13,
                minutes: 0,
            },
            text: "戸田SC(3F)J",
        },
        Timed {
            day: 12,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 13,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "戸田SC(3F)IK",
        },
        Timed {
            day: 16,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)J",
        },
        Timed {
            day: 19,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)K",
        },
        Timed {
            day: 19,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 20,
            from: Time {
                hours: 12,
                minutes: 30,
            },
            to: Time {
                hours: 15,
                minutes: 30,
            },
            text: "練馬総合体育館柔道場J",
        },
        Timed {
            day: 23,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)KJ",
        },
        Timed {
            day: 26,
            from: Time {
                hours: 15,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "大宮武道館(2F)IJ",
        },
        Timed {
            day: 26,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 27,
            from: Time {
                hours: 12,
                minutes: 30,
            },
            to: Time {
                hours: 15,
                minutes: 30,
            },
            text: "練馬総合体育館柔道場J",
        },
        Timed {
            day: 30,
            from: Time {
                hours: 17,
                minutes: 0,
            },
            to: Time {
                hours: 19,
                minutes: 0,
            },
            text: "戸田SC(2F)J",
        },
    ],
    errors: [],
}
